# synesthesia-trainer

./: Cargo.toml  index.html
src/: main.rs
